--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <head>
       <meta charset="UTF-8">
       <title>Hello World!</title>
+      <style>
+        body {
+          background-color: aqua;
+        }
+      </style>
     </head>
     <body>
       <h1>Hello World!</h1>
