--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title>Hello World!</title>
       <style>
         body {
-          background-color: aqua;
+          background-color:deepskyblue;
           color: white;
         }
       </style>
