--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,29 @@
     </head>
     <body>
       
-      <img src="../assets/images/up.svg">
-      <button id="notifyBtn">Кнопка</button>
+      <!-- <img src="../assets/images/up.svg"> -->
+      <!-- <button id="notifyBtn">Кнопка</button> -->
+
+      <select id="listLinks">
+      </select>      
+      <br>
+      <br>
+
+      <input id="textEdit" type="text" placeholder="Добавьте новую ссылку">
+      <button id="addBtn">Добавить</button>
+
+
+      <br>
+      <br>
+      <button id="getJson">JSON</button>
+
+
+      <br>
+      <br>
+      <p id="textView">Здесь должны выводиться слова</p>
+
+      <br><br>
+      <a id="closeBtn">[x] Закрыть окошечко</a>
 
       <script src="index.js"></script>
     </body>
